--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body{
   max-width: 1120px;
   width: 100%;
   padding: 40px 0;
+  background-color: grey;
 }
 .projects-content{
   margin: 0 40px;
@@ -46,7 +47,7 @@ body{
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #4070F4;
+  background-color: yellow;
   border-radius: 25px 25px 0 25px;
 }
 .overlay::before,
@@ -57,7 +58,7 @@ body{
   bottom: -40px;
   height: 40px;
   width: 40px;
-  background-color: #4070F4;
+  background-color: yellow;
 }
 .overlay::after{
   border-radius: 0 25px 0 0;
@@ -76,7 +77,7 @@ body{
   width: 100%;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid #4070F4;
+  border: 4px solid yellow;
 }
 .name{
   font-size: 18px;
@@ -93,7 +94,7 @@ body{
   font-size: 16px;
   color: #FFF;
   padding: 8px 16px;
-  background-color: #4070F4;
+  background-color: lawngreen;
   border-radius: 6px;
   margin: 14px;
   cursor: pointer;
@@ -121,11 +122,11 @@ body{
   left: 0;
 }
 .swiper-pagination-bullet{
-  background-color: #6E93f7;
+  background-color: aqua;
   opacity: 1;
 }
 .swiper-pagination-bullet-active{
-  background-color: #4070F4;
+  background-color: aqua;
 }
 
 @media screen and (max-width: 768px) {
