--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,120 @@
-/* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('fonts-not-decided.');
 
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #EFEFEF;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #efefef;
 }
+
 .projects-container{
-  max-width: 1120px;
-  width: 100%;
-  padding: 40px 0;
-  background-color: grey;
+    max-width: 1120px;
+    width: 100%;
+    background-color: grey;
+    padding: 40px 0;
 }
+
 .projects-content{
-  margin: 0 40px;
-  overflow: hidden;
-  border-radius: 25px;
+    margin: 0 40px;
 }
-. project{
-  border-radius: 25px;
-  background-color: #FFF;
-}
+
 .image-content,
 .project-content{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px 14px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 14px;
 }
+
 .image-content{
-  position: relative;
-  row-gap: 5px;
-  padding: 25px 0;
+    position: relative;
+    row-gap: 5px;
+    border-radius: 25px 25px 0 25px;
+    padding: 25px 0;
 }
+
 .overlay{
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: yellow;
-  border-radius: 25px 25px 0 25px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: yellow;
+    border-radius: 25px 25px 0 25px;
 }
+
 .overlay::before,
 .overlay::after{
-  content: '';
-  position: absolute;
-  right: 0;
-  bottom: -40px;
-  height: 40px;
-  width: 40px;
-  background-color: yellow;
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -40px;
+    height: 40px;
+    width: 40px;
+    background-color: yellow;
 }
+
 .overlay::after{
-  border-radius: 0 25px 0 0;
-  background-color: #FFF;
+    border-radius: 0 25px 0 0;
+    background-color: #fff;
 }
+
+.project{
+    border-radius: 25px;
+    background-color: #fff;
+}
+
 .project-image{
-  position: relative;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  background: #FFF;
-  padding: 3px;
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background-color: #FFF;
+    padding: 3px;
 }
+
 .project-image .project-img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 4px solid yellow;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid lawngreen;
 }
+
 .name{
-  font-size: 18px;
-  font-weight: 500;
-  color: #333;
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
 }
+
 .description{
-  font-size: 14px;
-  color: #707070;
-  text-align: center;
+    font-size: 14px;
+    color: #707070;
+    text-align: center;
 }
+
 .button{
-  border: none;
-  font-size: 16px;
-  color: #FFF;
-  padding: 8px 16px;
-  background-color: lawngreen;
-  border-radius: 6px;
-  margin: 14px;
-  cursor: pointer;
-  transition: all 0.3s ease;
+    border: none;
+    font-size: 16px;
+    color: #fff;
+    padding: 8px 16px;
+    background-color: lawngreen;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
+
 .button:hover{
-  background: #265DF2;
+    background-color: limegreen;
 }
+
 
 .swiper-navBtn{
   color: #6E93f7;
