--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-@import url('fonts-not-decided.');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 *{
     margin: 0;
@@ -91,12 +94,14 @@ body{
     font-size: 18px;
     font-weight: 500;
     color: #333;
+    font-family: 'Silkscreen', monospace;
 }
 
 .description{
     font-size: 14px;
     color: #707070;
     text-align: center;
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 .button{
