--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 .projects-container{
     max-width: 1120px;
     width: 100%;
-    background-color: grey;
+    background: linear-gradient(45deg, aqua, purple);
     border-radius: 4px;
     padding: 40px 0;
 }
