--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(45deg, aqua, purple);
+    background-color: #efefef;
 }
 
 .projects-container{
