--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body{
 
 .description{
     font-size: 14px;
-    color: /* #707070 */ green;
+    color: green;
     text-align: center;
     font-family: 'IBM Plex Mono', monospace;
 }
