--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body{
 
 .project{
     border-radius: 25px;
-    background-color: #fff;
+    background-color: pink;
 }
 
 .project-image{
@@ -100,7 +100,7 @@ body{
 
 .description{
     font-size: 14px;
-    color: green;
+    color: #707070;
     text-align: center;
     font-family: 'IBM Plex Mono', monospace;
 }
